--- a/Projects.json
+++ b/Projects.json
@@ -1,11 +1,12 @@
 [
   {
     "id": 1,
-    "title": "Game Reviews Website",
+    "title": "Game Reviews",
     "description": "A responsive game store interface using HTML, CSS, Bootstrap, and JavaScript. It fetches and displays game data from an API in styled cards with modals for details.It allows users to read detailed reviews.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119495/game_nhhoyj.png",
     "linkDemo": "https://rawdamohamed2.github.io/Game-Reviews/",
-    "GitHub":"https://github.com/rawdamohamed2/Game-Reviews"
+    "GitHub":"https://github.com/rawdamohamed2/Game-Reviews" ,
+    "Vanilla": true
   },
   {
     "id": 2,
@@ -13,7 +14,8 @@
     "description": "A weather forecast website that fetches real-time weather data using an external API. It displays current temperature, weather conditions, and city-specific information — built with HTML, CSS, JavaScript, and Axios for API integration.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119505/weather_v8does.png",
     "linkDemo": "https://rawdamohamed2.github.io/weather-Web/",
-    "GitHub":"https://github.com/rawdamohamed2/weather-Web"
+    "GitHub":"https://github.com/rawdamohamed2/weather-Web" ,
+    "Vanilla": true
   },
   {
     "id": 3,
@@ -21,15 +23,17 @@
     "description": "A personal portfolio website inspired by the Fokir template, built to practice and enhance my frontend development skills using HTML, CSS, Bootstrap, and JavaScript  featuring responsive design, smooth scrolling, and interactive UI elements.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119477/fokir_i3xlaq.png",
     "linkDemo": "https://rawdamohamed2.github.io/Fokir-Web/",
-    "GitHub":"https://github.com/rawdamohamed2/Fokir-Web"
+    "GitHub":"https://github.com/rawdamohamed2/Fokir-Web" ,
+    "Vanilla": true
   },
   {
     "id": 4,
-    "title": "Product Management Website",
+    "title": "Product Management",
     "description": "A dynamic CRUD (Create, Read, Update, Delete) system website that allows users to manage data entries efficiently through an interactive interface developed using HTML, CSS, JavaScript, and localStorage for data persistence.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119455/curd_s3drlq.png",
     "linkDemo": "https://rawdamohamed2.github.io/Product-CRUD/",
-    "GitHub":"https://github.com/rawdamohamed2/Product-CRUD"
+    "GitHub":"https://github.com/rawdamohamed2/Product-CRUD" ,
+    "Vanilla": true
   },
   {
     "id": 5,
@@ -37,22 +41,42 @@
     "description": "A responsive and interactive gallery website that allows users to filter images by category, preview them in a modal, switch between light/dark modes, and save favorites using localStorage  built with HTML, CSS, JavaScript, and Bootstrap.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119485/gallery_lzdqpg.png",
     "linkDemo": "https://rawdamohamed2.github.io/CodeAlpha_ImageGallery/",
-    "GitHub": "https://github.com/rawdamohamed2/CodeAlpha_ImageGallery"
+    "GitHub": "https://github.com/rawdamohamed2/CodeAlpha_ImageGallery" ,
+    "Vanilla": true
   },
   {
     "id": 6,
-    "title": "My Portfolio Website",
-    "description": "My first React project is a responsive portfolio site using React, Bootstrap, and JavaScript. It features smooth scroll, active link highlighting, dark mode, animations, a validated contact form, and is hosted on GitHub Pages.",
+    "title": "My Portfolio",
+    "description": "My first React project is a responsive portfolio site using React, Bootstrap, and JavaScript. It features smooth scroll, active link highlighting, dark mode, animations, a validated contact form.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119500/Portfolio_m2oik8.png",
     "linkDemo": "https://rawdamohamed2.github.io/portfolio-website/",
-    "GitHub": "https://github.com/rawdamohamed2/portfolio-website"
+    "GitHub": "https://github.com/rawdamohamed2/portfolio-website" ,
+    "Vanilla": false
   },
   {
     "id": 7,
-    "title": "My Calculator Website",
-    "description": "A React-based calculator with a clean interface. It supports basic operations, keyboard input, history tracking, and memory functions. Deployed using GitHub Pages.",
+    "title": "Calculator Website",
+    "description": "A React-based calculator with a clean interface. It supports basic operations, keyboard input, history tracking, and memory functions. It helps solve calculations quickly and accurately.",
     "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755119447/Calculator_fmwnfx.png",
     "linkDemo": "https://rawdamohamed2.github.io/CodeAlpha_Calculator/",
-    "GitHub": "https://github.com/rawdamohamed2/CodeAlpha_Calculator"
+    "GitHub": "https://github.com/rawdamohamed2/CodeAlpha_Calculator",
+    "Vanilla": false
+  }, 
+  {
+    "id": 8,
+    "title": "To-Do List",
+    "description": "A to-do list app is a simple tool that helps users organize tasks, set priorities.It allows adding, editing, and deleting tasks, marking them as completed, and filtering tasks based on their status.",
+    "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755372551/Todolist_e7kqss.png",
+    "linkDemo": "https://todolistrm.netlify.app/",
+    "GitHub": "https://github.com/rawdamohamed2/code_sentinel_TodoListApp" ,
+    "Vanilla": false
+  },{
+    "id": 9,
+    "title": "prodect Card",
+    "description": "A product card app shows product details in a simple card view. It includes name, image, price, and description. It helps users browse items quickly and make purchase decisions.",
+    "image": "https://res.cloudinary.com/dw956xm88/image/upload/v1755372617/prouctcard_swuibz.png",
+    "linkDemo": "https://projectcardrm.netlify.app/",
+    "GitHub": "https://github.com/rawdamohamed2/code_sentinel_ProductCard" ,
+    "Vanilla": false
   }
 ]
